--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
   font-family: var(--font-poppins);
   background: #000000;
   color: rgb(255, 255, 255);
-  max-width: 1024;
+  margin: 0px;
+  padding: 0px;
 }
 
