--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,81 @@
   
 }
 
+
+.centered-div{
+  width: 100%;
+  height: 150%;
+  background-color: rgba(0, 0, 0, 0.774);
+  text-align:center;
+  position:absolute;
+  top: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#check{
+  width: 15%;
+}
+
+
+.contactusform {
+  background-color: transparent; /* Form background color */
+  display: block;
+  margin: auto;
+  margin-top: 70px;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow */
+  width: 500px; /* Adjust the width as needed */
+  border: 2px solid violet;
+}
+
+.contactusform p {
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+}
+
+.mb-3 {
+  margin-bottom: 15px;
+}
+
+.form-label {
+  font-size: 14px;
+  color: violet;
+}
+
+.form-control {
+  width: 100%;
+  padding: 8px;
+  font-size: 14px;
+  margin-top: 5px;
+}
+
+
+.input-group {
+  margin-top: 10px;
+}
+
+.textarea {
+  height: 100px; /* Adjust the height of the textarea */
+}
+
+button[type='submit'] {
+  background-color: violet; /* Green button color */
+  color: #fff;
+  font-weight: bolder;
+  padding: 10px 50px;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+/* Add a hover effect to the button */
+button:hover {
+  background-color: rgb(116, 38, 116);
+}
+
+
