--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,6 +53,18 @@
     width: 350px; /* Adjust the width as needed */
     border: 2px solid #953ee2;
   }
+
+  .centered-div{
+    width: 100%;
+    height: 200%;
+    background-color: rgba(0, 0, 0, 0.774);
+    text-align:center;
+    position:absolute;
+    top: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .contactusform p {
