--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,51 +69,51 @@
   }
 }
 
-.contactusform p {
+/* .contactusform p {
   text-align: center;
   font-size: 18px;
   font-weight: bold;
   color: white;
-}
+} */
 
-.mb-3 {
+/* .mb-3 {
   margin-bottom: 15px;
-}
+} */
 
-.form-label {
+/* .form-label {
   font-size: 14px;
   color: #953ee2;
-}
+} */
 
-.form-control {
+/* .form-control {
   width: 100%;
   padding: 8px;
   font-size: 14px;
   margin-top: 5px;
-}
+} */
 
 
-.input-group {
+/* .input-group {
   margin-top: 10px;
 }
 
 .textarea {
-  height: 100px; /* Adjust the height of the textarea */
-}
+  height: 100px; 
+} */
 
-button[type='submit'] {
-  background-color: #953ee2; /* Green button color */
+/* button[type='submit'] {
+  background-color: #953ee2;
   color: #fff;
   font-weight: bolder;
   padding: 10px 50px;
   border: none;
   border-radius: 50px;
   cursor: pointer;
-}
+} */
 
 /* Add a hover effect to the button */
-button:hover {
+/* button:hover {
   background-color: rgb(116, 38, 116);
-}
+} */
 
 
